增加快速排序递归版本,修改冒泡排序

--- a/SortingAlg/经典排序算法.md
+++ b/SortingAlg/经典排序算法.md
@@ -53,20 +53,26 @@
 
 ----
 
-**定义**（Bubble Sort）:是一种计算机科学领域的较简单的排序算法。它重复地走访过要排序的元素列，依次比较两个相邻的元素，一层一层的将较大的元素往后移动，其现象和气泡在上升过程中慢慢变大类似，故成为冒泡排序。
+##### **定义**（Bubble Sort）
 
-**算法思想**
+​	是一种计算机科学领域的较简单的排序算法。它重复地走访过要排序的元素列，依次比较两个相邻的元素，一层一层的将较大的元素往后移动，其现象和气泡在上升过程中慢慢变大类似，故成为冒泡排序。
+
+##### **算法思想/步骤**
+
 （1）从第一个和第二个开始比较，如果第一个比第二个大，则交换位置，然后比较第二个和第三个，逐渐往后
 （2）经过第一轮后最大的元素已经排在最后，所以重复上述操作的话第二大的则会排在倒数第二的位置。
 （3）那重复上述操作n-1次即可完成排序，因为最后一次只有一个元素所以不需要比较。
 
-**算法分析**
-	冒泡排序是一种简单直接暴力的排序算法，为什么说它暴力？因为每一轮比较可能多个元素移动位置，而元素位置的互换是需要消耗资源的，所以这是一种偏慢的排序算法，仅适用于对于含有较少元素的数列进行排序。
+##### **算法分析**
+
+​	冒泡排序是一种简单直接暴力的排序算法，为什么说它暴力？因为每一轮比较可能多个元素移动位置，而元素位置的互换是需要消耗资源的，所以这是一种偏慢的排序算法，仅适用于对于含有较少元素的数列进行排序。
 
 ​	`稳定性`：从代码中可以看出只有前一个元素大于后一个元素才可能交换位置，所以相同元素的相对顺序不可能改变，所以它是稳定排序
 ​	`比较性`：因为排序时元素之间需要比较，所以是比较排序
 ​	`时间复杂度`：因为它需要双层循环n*(n-1))，所以平均时间复杂度为O(n^2)
 ​	`空间复杂度`：只需要常数个辅助单元，所以空间复杂度为O(1)，把空间复杂度为O(1)也即是原地排序（in-place）
+
+##### **代码实现**
 
 ```C++
 #include <iostream>
@@ -350,6 +356,217 @@ int main()
 //..第2个元素比较: 2 >= 1,不交换
 //当前序列: 1 2 3 4 
 ```
+
+#### 2. 快速排序
+
+----
+
+##### **定义(Quick Sort)**
+
+​	快速排序的基本思想：通过一趟排序将待排记录分隔成独立的两部分，其中一部分记录的关键字均比另一部分的关键字小，则可分别对这两部分记录继续进行排序，以达到整个序列有序。
+
+​	快速排序使用分治法来把一个串（list）分为两个子串（sub-lists）。具体算法流程如下：
+从数列中挑出一个元素，称为 “基准”（pivot）；重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面（相同的数可以到任一边）。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序。
+
+​	快速排序是由东尼 霍尔所发展的一种排序算法。在平均状况下，排序n个项目要O(nlogn)次比较。在最坏状况下则需要O(n2)比较，但这种状况并不常见。事实上，快速排序通常明显比其他O(nlogn)算法更快，因为它的内部循环（inner loop）可以在大部分的架构上很有效地实现出来。
+​	快速排序使用分治法（Divide and conquer）策略来把一个串行(list)分为两个子串行(sub-list)。快速排序又是一种分而治之思想在排序算法上的典型应用。本质上来看，快速排序应该算是在冒泡排序基础上的递归分治法。
+快速排序的名字起的是简单粗暴，因为一听到这个名字你就知道它存在的意义，就是快，而且效率高！他是处理大数据最快的排序算法之一了。虽然Worst Case的时间复杂度达到了O(n2),但是人家就是优秀，在大多数情况下都比平均时间复杂度O(nlogn)的排序算法表现要更好，可是为什么呢？
+
+##### **算法思想/步骤**
+
+- 从列表中选出一个元素，作为“基准”pivot，基准一般随机选择，或采用最左端、最右端和中间位置3元素的中值；
+- 将小于基准的元素排在基准前面，大于基准的元素排在基准后面，此时基准元素所在位置即为其最终排序完成时的位置；
+- 以基准元素为界，将列表分为两个子列表；
+- 递归地对子列表重复上述操作
+
+##### 代码实现
+
+```C++
+#include <iostream>
+
+using namespace std;
+void PrintArray(int arr[],int nStart,int nEnd)
+{
+    cout << "序号值: ";
+    for(int i = nStart; i <= nEnd ; i++)
+        printf("%3d ",i);
+    cout << endl;
+    cout << "元素值: ";
+    for(int i = nStart; i <= nEnd ; i++)
+        printf("%3d ",arr[i]);
+    cout << endl;
+}
+void Swap(int arr[],int i, int j)
+{
+    cout << "交换位置: " << i << ", " << j  << endl;
+    cout << "交换" << arr[i] << "和" << arr[j] << endl;
+    int tmp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = tmp;
+}
+/* 快速排序递归版本:
+ * 从序列中随机选择一个基准数,将基准移动到数据中间,
+ * 使得基准左边的数都小于或等于基准数,
+ * 使得基准右边的数都大于或等于基准数,
+ * 并返回基准数的位置索引.
+ * 然后再分别递归快速排序基准数左边和右边范围的序列
+ */
+void QuickSortRecursive(int arr[],int nLeft,int nRight)
+{
+    if(nLeft >= nRight)
+    {
+        printf("范围错误:(%d~%d),结束当前快速排序.\n",nLeft,nRight);
+        return;
+    }
+    printf("当前待排序列:%d~%d号元素如下\n",nLeft,nRight);
+    PrintArray(arr,nLeft,nRight);
+    int nL = nLeft;
+    int nR = nRight;
+    int nPrivot = arr[nLeft];
+    printf("--------选择第%d号元素%d作为基准数\n",nLeft,nPrivot);
+    while(nL < nR)
+    {
+        while (nL < nR && nPrivot <= arr[nR]) {
+            nR--;
+        }
+        printf("右边第%d号元素%d小于基准数%d,所以将%d替换左边第%d号元素%d,结果如下:\n",
+               nR,arr[nR],nPrivot,arr[nR], nL,arr[nL]);
+        arr[nL] = arr[nR];
+        PrintArray(arr,nLeft,nRight);
+        while (nL < nR && nPrivot >= arr[nL]) {
+						nL++;
+        }
+        printf("左边第%d号元素%d大于基准数%d,所以将%d替换右边第%d号元素%d,结果如下:\n",
+               nL,arr[nL],nPrivot,arr[nL], nR,arr[nR]);
+        arr[nR] = arr[nL];
+        PrintArray(arr,nLeft,nRight);
+    }
+    printf("基准数:%d归位,落在位置:%d,更新,结果如下:\n",nPrivot,nL);
+    arr[nL] = nPrivot;
+    PrintArray(arr,nLeft,nRight);
+    printf("********递归快排基准数左边第%d~%d号元素\n",nLeft,nL-1);
+    QuickSortRecursive(arr,nLeft,nL-1);
+    printf("********递归快排基准数右边第%d~%d号元素\n",nL+1,nRight);
+    QuickSortRecursive(arr,nL+1,nRight);
+}
+int main()
+{
+    int arr[10] = {89,32,38,487,43,0,5,893,13,3143};
+    QuickSortRecursive(arr,0,9);
+    PrintArray(arr,0,9);
+    return 0;
+}
+//运行结果:
+//当前待排序列:0~9号元素如下
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  89  32  38 487  43   0   5 893  13 3143 
+//--------选择第0号元素89作为基准数
+//右边第8号元素13小于基准数89,所以将13替换左边第0号元素89,结果如下:
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  13  32  38 487  43   0   5 893  13 3143 
+//左边第3号元素487大于基准数89,所以将487替换右边第8号元素13,结果如下:
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  13  32  38 487  43   0   5 893 487 3143 
+//右边第6号元素5小于基准数89,所以将5替换左边第3号元素487,结果如下:
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  13  32  38   5  43   0   5 893 487 3143 
+//左边第6号元素5大于基准数89,所以将5替换右边第6号元素5,结果如下:
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  13  32  38   5  43   0   5 893 487 3143 
+//基准数:89归位,落在位置:6,更新,结果如下:
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:  13  32  38   5  43   0  89 893 487 3143 
+//********递归快排基准数左边第0~5号元素
+//当前待排序列:0~5号元素如下
+//序号值:   0   1   2   3   4   5 
+//元素值:  13  32  38   5  43   0 
+//--------选择第0号元素13作为基准数
+//右边第5号元素0小于基准数13,所以将0替换左边第0号元素13,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0  32  38   5  43   0 
+//左边第1号元素32大于基准数13,所以将32替换右边第5号元素0,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0  32  38   5  43  32 
+//右边第3号元素5小于基准数13,所以将5替换左边第1号元素32,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0   5  38   5  43  32 
+//左边第2号元素38大于基准数13,所以将38替换右边第3号元素5,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0   5  38  38  43  32 
+//右边第2号元素38小于基准数13,所以将38替换左边第2号元素38,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0   5  38  38  43  32 
+//左边第2号元素38大于基准数13,所以将38替换右边第2号元素38,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0   5  38  38  43  32 
+//基准数:13归位,落在位置:2,更新,结果如下:
+//序号值:   0   1   2   3   4   5 
+//元素值:   0   5  13  38  43  32 
+//********递归快排基准数左边第0~1号元素
+//当前待排序列:0~1号元素如下
+//序号值:   0   1 
+//元素值:   0   5 
+//--------选择第0号元素0作为基准数
+//右边第0号元素0小于基准数0,所以将0替换左边第0号元素0,结果如下:
+//序号值:   0   1 
+//元素值:   0   5 
+//左边第0号元素0大于基准数0,所以将0替换右边第0号元素0,结果如下:
+//序号值:   0   1 
+//元素值:   0   5 
+//基准数:0归位,落在位置:0,更新,结果如下:
+//序号值:   0   1 
+//元素值:   0   5 
+//********递归快排基准数左边第0~-1号元素
+//范围错误:(0~-1),结束当前快速排序.
+//********递归快排基准数右边第1~1号元素
+//范围错误:(1~1),结束当前快速排序.
+//********递归快排基准数右边第3~5号元素
+//当前待排序列:3~5号元素如下
+//序号值:   3   4   5 
+//元素值:  38  43  32 
+//--------选择第3号元素38作为基准数
+//右边第5号元素32小于基准数38,所以将32替换左边第3号元素38,结果如下:
+//序号值:   3   4   5 
+//元素值:  32  43  32 
+//左边第4号元素43大于基准数38,所以将43替换右边第5号元素32,结果如下:
+//序号值:   3   4   5 
+//元素值:  32  43  43 
+//右边第4号元素43小于基准数38,所以将43替换左边第4号元素43,结果如下:
+//序号值:   3   4   5 
+//元素值:  32  43  43 
+//左边第4号元素43大于基准数38,所以将43替换右边第4号元素43,结果如下:
+//序号值:   3   4   5 
+//元素值:  32  43  43 
+//基准数:38归位,落在位置:4,更新,结果如下:
+//序号值:   3   4   5 
+//元素值:  32  38  43 
+//********递归快排基准数左边第3~3号元素
+//范围错误:(3~3),结束当前快速排序.
+//********递归快排基准数右边第5~5号元素
+//范围错误:(5~5),结束当前快速排序.
+//********递归快排基准数右边第7~9号元素
+//当前待排序列:7~9号元素如下
+//序号值:   7   8   9 
+//元素值: 893 487 3143 
+//--------选择第7号元素893作为基准数
+//右边第8号元素487小于基准数893,所以将487替换左边第7号元素893,结果如下:
+//序号值:   7   8   9 
+//元素值: 487 487 3143 
+//左边第8号元素487大于基准数893,所以将487替换右边第8号元素487,结果如下:
+//序号值:   7   8   9 
+//元素值: 487 487 3143 
+//基准数:893归位,落在位置:8,更新,结果如下:
+//序号值:   7   8   9 
+//元素值: 487 893 3143 
+//********递归快排基准数左边第7~7号元素
+//范围错误:(7~7),结束当前快速排序.
+//********递归快排基准数右边第9~9号元素
+//范围错误:(9~9),结束当前快速排序.
+//序号值:   0   1   2   3   4   5   6   7   8   9 
+//元素值:   0   5  13  32  38  43  89 487 893 3143 
+```
+
+
 
 
 
