修改选择排序打印日志

--- a/SortingAlg/经典排序算法.md
+++ b/SortingAlg/经典排序算法.md
@@ -33,19 +33,19 @@
 
 #### 算法复杂度比较
 
-| 排序方法 | 时间复杂度(平均)         | 最坏        | 最好        | 空间复杂度  | 稳定性 |
-| -------- | ------------------------ | ----------- | ----------- | ----------- | ------ |
-| 冒泡排序 | O(n^2^)   ==n==:数据规模 | O(n^2^)     | O(n)        | O(1)        | 稳定   |
-| 快速排序 | O(nlog~2~n)              | O(n^2^)     | O(nlog~2~n) | O(nlog~2~n) | 不稳定 |
-| 插入排序 | O(n^2^)                  | O(n^2^)     | O(n)        | O(1)        | 稳定   |
-| 希尔排序 | O(n^1.3^)                | O(n^2^)     | O(n)        | O(1)        | 不稳定 |
-| 选择排序 | O(n^2^)                  | O(n^2^)     | O(n^2^)     | O(1)        | 不稳定 |
-| 堆排序   | O(nlog~2~n)              | O(nlog~2~n) | O(nlog~2~n) | O(1)        | 不稳定 |
-| 归并排序 | O(nlog~2~n)              | O(nlog~2~n) | O(nlog~2~n) | O(n)        | 稳定   |
-|          |                          |             |             |             |        |
-| 计数排序 | O(n+k) ==k==:桶的个数    | O(n+k)      | O(n+k)      | O(n+k)      | 稳定   |
-| 桶排序   | O(n+k)                   | O(n^2^)     | O(n)        | O(n+k)      | 稳定   |
-| 基数排序 | O(n*k)                   | O(n*k)      | O(n*k)      | O(n+k)      | 稳定   |
+| 排序方法 | 时间复杂度(平均)     | 最坏        | 最好        | 空间复杂度  | 稳定性 |
+| -------- | -------------------- | ----------- | ----------- | ----------- | ------ |
+| 冒泡排序 | O(n^2^)   n:数据规模 | O(n^2^)     | O(n)        | O(1)        | 稳定   |
+| 快速排序 | O(nlog~2~n)          | O(n^2^)     | O(nlog~2~n) | O(nlog~2~n) | 不稳定 |
+| 插入排序 | O(n^2^)              | O(n^2^)     | O(n)        | O(1)        | 稳定   |
+| 希尔排序 | O(n^1.3^)            | O(n^2^)     | O(n)        | O(1)        | 不稳定 |
+| 选择排序 | O(n^2^)              | O(n^2^)     | O(n^2^)     | O(1)        | 不稳定 |
+| 堆排序   | O(nlog~2~n)          | O(nlog~2~n) | O(nlog~2~n) | O(1)        | 不稳定 |
+| 归并排序 | O(nlog~2~n)          | O(nlog~2~n) | O(nlog~2~n) | O(n)        | 稳定   |
+|          |                      |             |             |             |        |
+| 计数排序 | O(n+k) k:桶的个数    | O(n+k)      | O(n+k)      | O(n+k)      | 稳定   |
+| 桶排序   | O(n+k)               | O(n^2^)     | O(n)        | O(n+k)      | 稳定   |
+| 基数排序 | O(n*k)               | O(n*k)      | O(n*k)      | O(n+k)      | 稳定   |
 
 ![image-20200620111345810](经典排序算法.assets/image-20200620111345810.png)
 
